--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # NAVO Requirements
-# Enterprise knowledge discovery platform with OpenAI Enterprise integration
+# T-Mobile Enterprise knowledge discovery platform with Enterprise GPT integration
 
 # Core dependencies
 fastapi==0.104.1
@@ -11,7 +11,7 @@ python-multipart==0.0.6
 aiohttp==3.9.1
 httpx==0.25.2
 
-# OpenAI Enterprise
+# T-Mobile Enterprise GPT
 openai==1.3.7
 
 # Database and caching
