Remove T-Mobile references from documentation while preserving engineering story
- Update README.md: Keep compelling engineering narrative but make vendor-neutral
- Replace T-Mobile specific examples with generic enterprise terms
- Update environment variables: TMOBILE_* → ENTERPRISE_*
- Change domain examples: tmobile.com → yourcompany.com
- Preserve authentic engineering challenges and NAVO's value proposition
- Maintain story authenticity while ensuring enterprise-agnostic approach

Documentation now tells the same compelling story without vendor-specific
references, making NAVO suitable for any enterprise deployment.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # NAVO Requirements
-# T-Mobile Enterprise knowledge discovery platform with Enterprise GPT integration
+# Enterprise knowledge discovery platform with Enterprise GPT integration
 
 # Core dependencies
 fastapi==0.104.1
