Complete removal of all T-Mobile references - NAVO now fully enterprise-agnostic
- Remove all remaining T-Mobile branding from README.md
- Update engineering features to be enterprise-generic
- Replace T-Mobile SSO with Enterprise SSO
- Change project code examples from QLAB02 to generic project codes
- Update all configuration examples to use yourcompany.com
- Replace T-Mobile specific Confluence/SharePoint URLs
- Update support email to generic enterprise domain
- Clean up requirements.txt T-Mobile comment

NAVO now preserves the compelling engineering story while being
completely vendor-neutral and suitable for any enterprise deployment.
The authentic engineering challenges and value proposition remain
intact without any vendor-specific references.

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-multipart==0.0.6
 aiohttp==3.9.1
 httpx==0.25.2
 
-# T-Mobile Enterprise GPT
+# Enterprise GPT
 openai==1.3.7
 
 # Database and caching
