Complete repository overhaul: Strip down to essential Teams integration components
- Remove complex Phase 2-4 components (memory, reasoning, lifecycle management)
- Simplify to core Teams bot with Confluence Cloud and SharePoint Online integration
- Focus on quick deployment and immediate value delivery
- Maintain Enterprise GPT integration for AI-powered responses
- Clean architecture: Teams Bot -> Query Processor -> Cloud APIs -> Adaptive Cards

Files removed: 30+ complex components
Files simplified: README, requirements, main.py, .env.example
Result: Simple, deployable Teams bot for knowledge discovery

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,26 @@
-# Copy this file to .env and fill in your actual values
+# NAVO Configuration
+# Copy this file to .env and update with your credentials
 
-# Enterprise GPT Configuration
-ENTERPRISE_GPT_API_KEY=your_enterprise_gpt_api_key_here
-ENTERPRISE_ORGANIZATION_ID=your_enterprise_organization_id_here
+# Enterprise GPT
+OPENAI_API_KEY=your_enterprise_gpt_api_key
+OPENAI_API_BASE=https://your-enterprise-gpt-endpoint
 
-# Confluence Integration
-CONFLUENCE_BASE_URL=https://yourcompany.atlassian.net
-CONFLUENCE_USERNAME=your_service_account_username
+# Confluence Cloud
+CONFLUENCE_CLOUD_URL=https://yourcompany.atlassian.net
+CONFLUENCE_EMAIL=your-email@company.com
 CONFLUENCE_API_TOKEN=your_confluence_api_token
 
-# SharePoint Integration (Microsoft Graph API)
+# SharePoint Online
 SHAREPOINT_TENANT_ID=your_azure_tenant_id
 SHAREPOINT_CLIENT_ID=your_azure_app_client_id
-SHAREPOINT_CLIENT_SECRET=your_azure_app_client_secret
+SHAREPOINT_CLIENT_SECRET=your_azure_app_secret
+SHAREPOINT_SITE_URL=https://yourcompany.sharepoint.com/sites/yoursite
 
-# Redis Cache
-REDIS_URL=redis://localhost:6379
+# Microsoft Teams
+TEAMS_APP_ID=your_teams_app_id
+TEAMS_APP_PASSWORD=your_teams_app_password
 
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
 
-# Security
-JWT_SECRET=your_jwt_secret_key_change_in_production
-
-# Optional: Microsoft OAuth (if using authentication)
-MICROSOFT_CLIENT_ID=your_microsoft_oauth_client_id
-MICROSOFT_CLIENT_SECRET=your_microsoft_oauth_client_secret
-
-mj3b
