Complete repository reorganization: Simplified flat structure for Teams integration
- Removed complex nested src/ folder structure
- Created flat, simple file organization matching README
- Recoded all Python files for lightweight Teams bot implementation
- Simplified dependencies to essential packages only
- Updated configuration files for easy deployment
- Total code reduced to 879 lines across 6 Python files
- Ready for quick engineer implementation and deployment

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,29 @@
-# NAVO Configuration
+# NAVO Environment Configuration
 # Copy this file to .env and update with your credentials
 
-# Enterprise GPT
+# Enterprise GPT Configuration
 OPENAI_API_KEY=your_enterprise_gpt_api_key
 OPENAI_API_BASE=https://your-enterprise-gpt-endpoint
 
-# Confluence Cloud
+# Confluence Cloud Configuration
 CONFLUENCE_CLOUD_URL=https://yourcompany.atlassian.net
 CONFLUENCE_EMAIL=your-email@company.com
 CONFLUENCE_API_TOKEN=your_confluence_api_token
 
-# SharePoint Online
+# SharePoint Online Configuration
 SHAREPOINT_TENANT_ID=your_azure_tenant_id
 SHAREPOINT_CLIENT_ID=your_azure_app_client_id
-SHAREPOINT_CLIENT_SECRET=your_azure_app_secret
+SHAREPOINT_CLIENT_SECRET=your_azure_app_client_secret
 SHAREPOINT_SITE_URL=https://yourcompany.sharepoint.com/sites/yoursite
 
-# Microsoft Teams
+# Microsoft Teams Bot Configuration
 TEAMS_APP_ID=your_teams_app_id
 TEAMS_APP_PASSWORD=your_teams_app_password
 
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
+
+# Logging Level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
 
