--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,24 @@
-# NAVO Requirements - Simplified for Teams integration
+# NAVO Requirements - Simplified Teams Integration
 
-# Core dependencies
+# Core web framework
 fastapi==0.115.13
 uvicorn==0.32.1
-pydantic==2.11.7
 
-# Microsoft Bot Framework
+# Microsoft Bot Framework for Teams
 botbuilder-core==4.15.0
 botbuilder-schema==4.15.0
 botbuilder-integration-aiohttp==4.15.0
 
-# HTTP client
+# HTTP client for API calls
 aiohttp==3.11.11
 
-# OpenAI Enterprise GPT
+# OpenAI for Enterprise GPT
 openai==1.58.1
 
-# Environment management
+# Environment and configuration
 python-dotenv==1.0.1
 
-# Logging
-structlog==24.5.0
-
-# Testing
+# Development and testing
 pytest==8.3.4
 pytest-asyncio==0.24.0
 
