--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ SHAREPOINT_CLIENT_ID=your-sharepoint-app-client-id
 SHAREPOINT_CLIENT_SECRET=your-sharepoint-app-client-secret
 SHAREPOINT_SITE_URL=https://yourcompany.sharepoint.com/sites/yoursite
 
+# Optional: Path to local Markdown/text documentation
+LOCAL_DOCS_PATH=/path/to/local/docs
+
 # Optional: Application Insights (for monitoring)
 APPINSIGHTS_INSTRUMENTATION_KEY=your-app-insights-key
 
