Add LOCAL_DOCS_PATH example

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ SHAREPOINT_TENANT_ID=your-azure-tenant-id
 SHAREPOINT_CLIENT_ID=your-sharepoint-app-client-id
 SHAREPOINT_CLIENT_SECRET=your-sharepoint-app-client-secret
 SHAREPOINT_SITE_URL=https://yourcompany.sharepoint.com/sites/yoursite
+# Optional local documentation search
+LOCAL_DOCS_PATH=/path/to/markdown/docs
 
 # Optional: Application Insights (for monitoring)
 APPINSIGHTS_INSTRUMENTATION_KEY=your-app-insights-key
